# infinitashook

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md
client/: app.js  config.js  package.json
server/: .gitignore  CMakeLists.txt  infinitashook.sln  infinitashook.vcxproj  infinitashook.vcxproj.filters
server/src/: bm2dx.h  bm2dx_util.h  context.cc  context.h  game_environment.cc  game_environment.h  infinitashook.cc  input_poll.cc  input_poll.h
server/src/core/: event_server.cc  event_server.h
server/src/core/bm2dx/: bm2dx.cc  bm2dx.h  bm2dx_util.cc  bm2dx_util.h
server/src/event/: score_event.cc  score_event.h
server/src/hook/: base_hook.h  result_hook.cc  result_hook.h
server/src/message/: base_message.cc  base_message.h  input_message.cc  input_message.h  score_message.cc  score_message.h
server/src/util/: log.h
